Apply fixes from Error Prone via https://lift.sonatype.com