@@ -21,9 +21,9 @@
  */
 package org.ojalgo.matrix.operation;
 
+import com.google.errorprone.annotations.Var;
 import java.lang.reflect.Array;
 import java.util.function.IntSupplier;
-
 import org.ojalgo.ProgrammingError;
 import org.ojalgo.array.operation.DOT;
 import org.ojalgo.concurrent.DivideAndConquer;
@@ -53,7 +53,7 @@ public class MultiplyBoth implements MatrixOperation {
 
     private static final DivideAndConquer.Divider DIVIDER = ProcessingService.INSTANCE.divider();
 
-    public static <N extends Scalar<N>> MultiplyBoth.Generic<N> newGeneric(final int rows, final int columns) {
+    public static <N extends Scalar<N>> MultiplyBoth.Generic<N> newGeneric( int rows,  int columns) {
         if (rows > THRESHOLD && columns > THRESHOLD) {
             return MultiplyBoth::fillMxN_MT_G;
         }
@@ -66,11 +66,11 @@ public class MultiplyBoth implements MatrixOperation {
         return MultiplyBoth::fillMxN_G;
     }
 
-    public static MultiplyBoth.Primitive newPrimitive32(final int rows, final int columns) {
+    public static MultiplyBoth.Primitive newPrimitive32( int rows,  int columns) {
         return MultiplyBoth.newPrimitive64(rows, columns);
     }
 
-    public static MultiplyBoth.Primitive newPrimitive64(final int rows, final int columns) {
+    public static MultiplyBoth.Primitive newPrimitive64( int rows,  int columns) {
         if (rows > THRESHOLD && columns > THRESHOLD) {
             return MultiplyBoth::fillMxN_MT_P64;
         }
@@ -113,46 +113,30 @@ public class MultiplyBoth implements MatrixOperation {
         return MultiplyBoth::fillMxN_P64;
     }
 
-    /**
-     * Not running code. Copies used as a starting point when coding various variants
-     */
-    private static void base(final TransformableRegion<Double> product, final Access1D<Double> left, final int complexity, final Access1D<Double> right) {
+    
 
-        int nbRows = product.getRowDim();
-        int nbCols = product.getColDim();
-
-        for (int i = 0; i < nbRows; i++) {
-            for (int c = 0; c < complexity; c++) {
-                for (int j = 0; j < nbCols; j++) {
-                    product.add(Structure2D.index(nbRows, i, j),
-                            left.doubleValue(Structure2D.index(nbRows, i, c)) * right.doubleValue(Structure2D.index(complexity, c, j)));
-                }
-            }
-        }
-    }
-
-    static void divide(final int first, final int limit, final Conquerer conquerer) {
+    static void divide( int first,  int limit,  Conquerer conquerer) {
         DIVIDER.parallelism(PARALLELISM).threshold(THRESHOLD).divide(first, limit, conquerer);
     }
 
-    static void fill0xN_P64(final TransformableRegion<Double> product, final Access1D<Double> left, final int complexity, final Access1D<Double> right) {
+    static void fill0xN_P64( TransformableRegion<Double> product,  Access1D<Double> left,  int complexity,  Access1D<Double> right) {
 
         int tmpColDim = product.getColDim();
 
         for (int j = 0; j < tmpColDim; j++) {
 
-            double tmp0J = PrimitiveMath.ZERO;
-            double tmp1J = PrimitiveMath.ZERO;
-            double tmp2J = PrimitiveMath.ZERO;
-            double tmp3J = PrimitiveMath.ZERO;
-            double tmp4J = PrimitiveMath.ZERO;
-            double tmp5J = PrimitiveMath.ZERO;
-            double tmp6J = PrimitiveMath.ZERO;
-            double tmp7J = PrimitiveMath.ZERO;
-            double tmp8J = PrimitiveMath.ZERO;
-            double tmp9J = PrimitiveMath.ZERO;
+            @Var double tmp0J = PrimitiveMath.ZERO;
+            @Var double tmp1J = PrimitiveMath.ZERO;
+            @Var double tmp2J = PrimitiveMath.ZERO;
+            @Var double tmp3J = PrimitiveMath.ZERO;
+            @Var double tmp4J = PrimitiveMath.ZERO;
+            @Var double tmp5J = PrimitiveMath.ZERO;
+            @Var double tmp6J = PrimitiveMath.ZERO;
+            @Var double tmp7J = PrimitiveMath.ZERO;
+            @Var double tmp8J = PrimitiveMath.ZERO;
+            @Var double tmp9J = PrimitiveMath.ZERO;
 
-            int tmpIndex = 0;
+            @Var int tmpIndex = 0;
             for (int c = 0; c < complexity; c++) {
                 double tmpRightCJ = right.doubleValue(Structure2D.index(complexity, c, j));
                 tmp0J += left.doubleValue(tmpIndex++) * tmpRightCJ;
@@ -180,9 +164,9 @@ public class MultiplyBoth implements MatrixOperation {
         }
     }
 
-    static void fill1x1_P64(final TransformableRegion<Double> product, final Access1D<Double> left, final int complexity, final Access1D<Double> right) {
+    static void fill1x1_P64( TransformableRegion<Double> product,  Access1D<Double> left,  int complexity,  Access1D<Double> right) {
 
-        double tmp00 = PrimitiveMath.ZERO;
+        @Var double tmp00 = PrimitiveMath.ZERO;
 
         for (long c = 0L; c < complexity; c++) {
             tmp00 += left.doubleValue(c) * right.doubleValue(c);
@@ -191,24 +175,24 @@ public class MultiplyBoth implements MatrixOperation {
         product.set(0L, 0L, tmp00);
     }
 
-    static <N extends Scalar<N>> void fill1xN_G(final TransformableRegion<N> product, final Access1D<N> left, final int complexity, final Access1D<N> right) {
+    static <N extends Scalar<N>> void fill1xN_G( TransformableRegion<N> product,  Access1D<N> left,  int complexity,  Access1D<N> right) {
 
-        Class<N> componenetType = (Class<N>) left.get(0L).getClass();
+        var componenetType = (Class<N>) left.get(0L).getClass();
         N zero;
         try {
-            zero = componenetType.newInstance();
-        } catch (InstantiationException | IllegalAccessException exception) {
+            zero = componenetType.getDeclaredConstructor().newInstance();
+        } catch (ReflectiveOperationException exception) {
             exception.printStackTrace();
             throw new ProgrammingError(exception);
         }
 
         int tmpColDim = product.getColDim();
 
-        N[] tmpLeftRow = (N[]) Array.newInstance(componenetType, complexity);
-        N tmpVal;
+        var tmpLeftRow = (N[]) Array.newInstance(componenetType, complexity);
+        @Var N tmpVal;
 
-        int tmpFirst = 0;
-        int tmpLimit = complexity;
+        @Var int tmpFirst = 0;
+        @Var int tmpLimit = complexity;
 
         for (int c = 0; c < complexity; c++) {
             tmpLeftRow[c] = left.get(c);
@@ -228,7 +212,7 @@ public class MultiplyBoth implements MatrixOperation {
         }
     }
 
-    static void fill1xN_P64(final TransformableRegion<Double> product, final Access1D<?> left, final int complexity, final Access1D<?> right) {
+    static void fill1xN_P64( TransformableRegion<Double> product,  Access1D<?> left,  int complexity,  Access1D<?> right) {
 
         int nbCols = product.getColDim();
 
@@ -242,14 +226,14 @@ public class MultiplyBoth implements MatrixOperation {
         }
     }
 
-    static void fill2x2_P64(final TransformableRegion<Double> product, final Access1D<Double> left, final int complexity, final Access1D<Double> right) {
+    static void fill2x2_P64( TransformableRegion<Double> product,  Access1D<Double> left,  int complexity,  Access1D<Double> right) {
 
-        double tmp00 = PrimitiveMath.ZERO;
-        double tmp10 = PrimitiveMath.ZERO;
-        double tmp01 = PrimitiveMath.ZERO;
-        double tmp11 = PrimitiveMath.ZERO;
+        @Var double tmp00 = PrimitiveMath.ZERO;
+        @Var double tmp10 = PrimitiveMath.ZERO;
+        @Var double tmp01 = PrimitiveMath.ZERO;
+        @Var double tmp11 = PrimitiveMath.ZERO;
 
-        long tmpIndex;
+        @Var long tmpIndex;
         for (long c = 0; c < complexity; c++) {
 
             tmpIndex = c * 2L;
@@ -274,19 +258,19 @@ public class MultiplyBoth implements MatrixOperation {
         product.set(1, 1, tmp11);
     }
 
-    static void fill3x3_P64(final TransformableRegion<Double> product, final Access1D<Double> left, final int complexity, final Access1D<Double> right) {
+    static void fill3x3_P64( TransformableRegion<Double> product,  Access1D<Double> left,  int complexity,  Access1D<Double> right) {
 
-        double tmp00 = PrimitiveMath.ZERO;
-        double tmp10 = PrimitiveMath.ZERO;
-        double tmp20 = PrimitiveMath.ZERO;
-        double tmp01 = PrimitiveMath.ZERO;
-        double tmp11 = PrimitiveMath.ZERO;
-        double tmp21 = PrimitiveMath.ZERO;
-        double tmp02 = PrimitiveMath.ZERO;
-        double tmp12 = PrimitiveMath.ZERO;
-        double tmp22 = PrimitiveMath.ZERO;
+        @Var double tmp00 = PrimitiveMath.ZERO;
+        @Var double tmp10 = PrimitiveMath.ZERO;
+        @Var double tmp20 = PrimitiveMath.ZERO;
+        @Var double tmp01 = PrimitiveMath.ZERO;
+        @Var double tmp11 = PrimitiveMath.ZERO;
+        @Var double tmp21 = PrimitiveMath.ZERO;
+        @Var double tmp02 = PrimitiveMath.ZERO;
+        @Var double tmp12 = PrimitiveMath.ZERO;
+        @Var double tmp22 = PrimitiveMath.ZERO;
 
-        long tmpIndex;
+        @Var long tmpIndex;
         for (long c = 0; c < complexity; c++) {
 
             tmpIndex = c * 3L;
@@ -326,26 +310,26 @@ public class MultiplyBoth implements MatrixOperation {
         product.set(2, 2, tmp22);
     }
 
-    static void fill4x4_P64(final TransformableRegion<Double> product, final Access1D<Double> left, final int complexity, final Access1D<Double> right) {
+    static void fill4x4_P64( TransformableRegion<Double> product,  Access1D<Double> left,  int complexity,  Access1D<Double> right) {
 
-        double tmp00 = PrimitiveMath.ZERO;
-        double tmp10 = PrimitiveMath.ZERO;
-        double tmp20 = PrimitiveMath.ZERO;
-        double tmp30 = PrimitiveMath.ZERO;
-        double tmp01 = PrimitiveMath.ZERO;
-        double tmp11 = PrimitiveMath.ZERO;
-        double tmp21 = PrimitiveMath.ZERO;
-        double tmp31 = PrimitiveMath.ZERO;
-        double tmp02 = PrimitiveMath.ZERO;
-        double tmp12 = PrimitiveMath.ZERO;
-        double tmp22 = PrimitiveMath.ZERO;
-        double tmp32 = PrimitiveMath.ZERO;
-        double tmp03 = PrimitiveMath.ZERO;
-        double tmp13 = PrimitiveMath.ZERO;
-        double tmp23 = PrimitiveMath.ZERO;
-        double tmp33 = PrimitiveMath.ZERO;
+        @Var double tmp00 = PrimitiveMath.ZERO;
+        @Var double tmp10 = PrimitiveMath.ZERO;
+        @Var double tmp20 = PrimitiveMath.ZERO;
+        @Var double tmp30 = PrimitiveMath.ZERO;
+        @Var double tmp01 = PrimitiveMath.ZERO;
+        @Var double tmp11 = PrimitiveMath.ZERO;
+        @Var double tmp21 = PrimitiveMath.ZERO;
+        @Var double tmp31 = PrimitiveMath.ZERO;
+        @Var double tmp02 = PrimitiveMath.ZERO;
+        @Var double tmp12 = PrimitiveMath.ZERO;
+        @Var double tmp22 = PrimitiveMath.ZERO;
+        @Var double tmp32 = PrimitiveMath.ZERO;
+        @Var double tmp03 = PrimitiveMath.ZERO;
+        @Var double tmp13 = PrimitiveMath.ZERO;
+        @Var double tmp23 = PrimitiveMath.ZERO;
+        @Var double tmp33 = PrimitiveMath.ZERO;
 
-        long tmpIndex;
+        @Var long tmpIndex;
         for (long c = 0; c < complexity; c++) {
 
             tmpIndex = c * 4L;
@@ -404,35 +388,35 @@ public class MultiplyBoth implements MatrixOperation {
         product.set(3, 3, tmp33);
     }
 
-    static void fill5x5_P64(final TransformableRegion<Double> product, final Access1D<Double> left, final int complexity, final Access1D<Double> right) {
+    static void fill5x5_P64( TransformableRegion<Double> product,  Access1D<Double> left,  int complexity,  Access1D<Double> right) {
 
-        double tmp00 = PrimitiveMath.ZERO;
-        double tmp10 = PrimitiveMath.ZERO;
-        double tmp20 = PrimitiveMath.ZERO;
-        double tmp30 = PrimitiveMath.ZERO;
-        double tmp40 = PrimitiveMath.ZERO;
-        double tmp01 = PrimitiveMath.ZERO;
-        double tmp11 = PrimitiveMath.ZERO;
-        double tmp21 = PrimitiveMath.ZERO;
-        double tmp31 = PrimitiveMath.ZERO;
-        double tmp41 = PrimitiveMath.ZERO;
-        double tmp02 = PrimitiveMath.ZERO;
-        double tmp12 = PrimitiveMath.ZERO;
-        double tmp22 = PrimitiveMath.ZERO;
-        double tmp32 = PrimitiveMath.ZERO;
-        double tmp42 = PrimitiveMath.ZERO;
-        double tmp03 = PrimitiveMath.ZERO;
-        double tmp13 = PrimitiveMath.ZERO;
-        double tmp23 = PrimitiveMath.ZERO;
-        double tmp33 = PrimitiveMath.ZERO;
-        double tmp43 = PrimitiveMath.ZERO;
-        double tmp04 = PrimitiveMath.ZERO;
-        double tmp14 = PrimitiveMath.ZERO;
-        double tmp24 = PrimitiveMath.ZERO;
-        double tmp34 = PrimitiveMath.ZERO;
-        double tmp44 = PrimitiveMath.ZERO;
+        @Var double tmp00 = PrimitiveMath.ZERO;
+        @Var double tmp10 = PrimitiveMath.ZERO;
+        @Var double tmp20 = PrimitiveMath.ZERO;
+        @Var double tmp30 = PrimitiveMath.ZERO;
+        @Var double tmp40 = PrimitiveMath.ZERO;
+        @Var double tmp01 = PrimitiveMath.ZERO;
+        @Var double tmp11 = PrimitiveMath.ZERO;
+        @Var double tmp21 = PrimitiveMath.ZERO;
+        @Var double tmp31 = PrimitiveMath.ZERO;
+        @Var double tmp41 = PrimitiveMath.ZERO;
+        @Var double tmp02 = PrimitiveMath.ZERO;
+        @Var double tmp12 = PrimitiveMath.ZERO;
+        @Var double tmp22 = PrimitiveMath.ZERO;
+        @Var double tmp32 = PrimitiveMath.ZERO;
+        @Var double tmp42 = PrimitiveMath.ZERO;
+        @Var double tmp03 = PrimitiveMath.ZERO;
+        @Var double tmp13 = PrimitiveMath.ZERO;
+        @Var double tmp23 = PrimitiveMath.ZERO;
+        @Var double tmp33 = PrimitiveMath.ZERO;
+        @Var double tmp43 = PrimitiveMath.ZERO;
+        @Var double tmp04 = PrimitiveMath.ZERO;
+        @Var double tmp14 = PrimitiveMath.ZERO;
+        @Var double tmp24 = PrimitiveMath.ZERO;
+        @Var double tmp34 = PrimitiveMath.ZERO;
+        @Var double tmp44 = PrimitiveMath.ZERO;
 
-        long tmpIndex;
+        @Var long tmpIndex;
         for (long c = 0; c < complexity; c++) {
 
             tmpIndex = c * 5L;
@@ -514,20 +498,20 @@ public class MultiplyBoth implements MatrixOperation {
         product.set(4, 4, tmp44);
     }
 
-    static void fill6xN_P64(final TransformableRegion<Double> product, final Access1D<Double> left, final int complexity, final Access1D<Double> right) {
+    static void fill6xN_P64( TransformableRegion<Double> product,  Access1D<Double> left,  int complexity,  Access1D<Double> right) {
 
         int tmpColDim = product.getColDim();
 
         for (int j = 0; j < tmpColDim; j++) {
 
-            double tmp0J = PrimitiveMath.ZERO;
-            double tmp1J = PrimitiveMath.ZERO;
-            double tmp2J = PrimitiveMath.ZERO;
-            double tmp3J = PrimitiveMath.ZERO;
-            double tmp4J = PrimitiveMath.ZERO;
-            double tmp5J = PrimitiveMath.ZERO;
+            @Var double tmp0J = PrimitiveMath.ZERO;
+            @Var double tmp1J = PrimitiveMath.ZERO;
+            @Var double tmp2J = PrimitiveMath.ZERO;
+            @Var double tmp3J = PrimitiveMath.ZERO;
+            @Var double tmp4J = PrimitiveMath.ZERO;
+            @Var double tmp5J = PrimitiveMath.ZERO;
 
-            int tmpIndex = 0;
+            @Var int tmpIndex = 0;
             for (int c = 0; c < complexity; c++) {
                 double tmpRightCJ = right.doubleValue(Structure2D.index(complexity, c, j));
                 tmp0J += left.doubleValue(tmpIndex++) * tmpRightCJ;
@@ -547,21 +531,21 @@ public class MultiplyBoth implements MatrixOperation {
         }
     }
 
-    static void fill7xN_P64(final TransformableRegion<Double> product, final Access1D<Double> left, final int complexity, final Access1D<Double> right) {
+    static void fill7xN_P64( TransformableRegion<Double> product,  Access1D<Double> left,  int complexity,  Access1D<Double> right) {
 
         int tmpColDim = product.getColDim();
 
         for (int j = 0; j < tmpColDim; j++) {
 
-            double tmp0J = PrimitiveMath.ZERO;
-            double tmp1J = PrimitiveMath.ZERO;
-            double tmp2J = PrimitiveMath.ZERO;
-            double tmp3J = PrimitiveMath.ZERO;
-            double tmp4J = PrimitiveMath.ZERO;
-            double tmp5J = PrimitiveMath.ZERO;
-            double tmp6J = PrimitiveMath.ZERO;
+            @Var double tmp0J = PrimitiveMath.ZERO;
+            @Var double tmp1J = PrimitiveMath.ZERO;
+            @Var double tmp2J = PrimitiveMath.ZERO;
+            @Var double tmp3J = PrimitiveMath.ZERO;
+            @Var double tmp4J = PrimitiveMath.ZERO;
+            @Var double tmp5J = PrimitiveMath.ZERO;
+            @Var double tmp6J = PrimitiveMath.ZERO;
 
-            int tmpIndex = 0;
+            @Var int tmpIndex = 0;
             for (int c = 0; c < complexity; c++) {
                 double tmpRightCJ = right.doubleValue(Structure2D.index(complexity, c, j));
                 tmp0J += left.doubleValue(tmpIndex++) * tmpRightCJ;
@@ -583,22 +567,22 @@ public class MultiplyBoth implements MatrixOperation {
         }
     }
 
-    static void fill8xN_P64(final TransformableRegion<Double> product, final Access1D<Double> left, final int complexity, final Access1D<Double> right) {
+    static void fill8xN_P64( TransformableRegion<Double> product,  Access1D<Double> left,  int complexity,  Access1D<Double> right) {
 
         int tmpColDim = product.getColDim();
 
         for (int j = 0; j < tmpColDim; j++) {
 
-            double tmp0J = PrimitiveMath.ZERO;
-            double tmp1J = PrimitiveMath.ZERO;
-            double tmp2J = PrimitiveMath.ZERO;
-            double tmp3J = PrimitiveMath.ZERO;
-            double tmp4J = PrimitiveMath.ZERO;
-            double tmp5J = PrimitiveMath.ZERO;
-            double tmp6J = PrimitiveMath.ZERO;
-            double tmp7J = PrimitiveMath.ZERO;
+            @Var double tmp0J = PrimitiveMath.ZERO;
+            @Var double tmp1J = PrimitiveMath.ZERO;
+            @Var double tmp2J = PrimitiveMath.ZERO;
+            @Var double tmp3J = PrimitiveMath.ZERO;
+            @Var double tmp4J = PrimitiveMath.ZERO;
+            @Var double tmp5J = PrimitiveMath.ZERO;
+            @Var double tmp6J = PrimitiveMath.ZERO;
+            @Var double tmp7J = PrimitiveMath.ZERO;
 
-            int tmpIndex = 0;
+            @Var int tmpIndex = 0;
             for (int c = 0; c < complexity; c++) {
                 double tmpRightCJ = right.doubleValue(Structure2D.index(complexity, c, j));
                 tmp0J += left.doubleValue(tmpIndex++) * tmpRightCJ;
@@ -622,23 +606,23 @@ public class MultiplyBoth implements MatrixOperation {
         }
     }
 
-    static void fill9xN_P64(final TransformableRegion<Double> product, final Access1D<Double> left, final int complexity, final Access1D<Double> right) {
+    static void fill9xN_P64( TransformableRegion<Double> product,  Access1D<Double> left,  int complexity,  Access1D<Double> right) {
 
         int tmpColDim = product.getColDim();
 
         for (int j = 0; j < tmpColDim; j++) {
 
-            double tmp0J = PrimitiveMath.ZERO;
-            double tmp1J = PrimitiveMath.ZERO;
-            double tmp2J = PrimitiveMath.ZERO;
-            double tmp3J = PrimitiveMath.ZERO;
-            double tmp4J = PrimitiveMath.ZERO;
-            double tmp5J = PrimitiveMath.ZERO;
-            double tmp6J = PrimitiveMath.ZERO;
-            double tmp7J = PrimitiveMath.ZERO;
-            double tmp8J = PrimitiveMath.ZERO;
+            @Var double tmp0J = PrimitiveMath.ZERO;
+            @Var double tmp1J = PrimitiveMath.ZERO;
+            @Var double tmp2J = PrimitiveMath.ZERO;
+            @Var double tmp3J = PrimitiveMath.ZERO;
+            @Var double tmp4J = PrimitiveMath.ZERO;
+            @Var double tmp5J = PrimitiveMath.ZERO;
+            @Var double tmp6J = PrimitiveMath.ZERO;
+            @Var double tmp7J = PrimitiveMath.ZERO;
+            @Var double tmp8J = PrimitiveMath.ZERO;
 
-            int tmpIndex = 0;
+            @Var int tmpIndex = 0;
             for (int c = 0; c < complexity; c++) {
                 double tmpRightCJ = right.doubleValue(Structure2D.index(complexity, c, j));
                 tmp0J += left.doubleValue(tmpIndex++) * tmpRightCJ;
@@ -664,24 +648,24 @@ public class MultiplyBoth implements MatrixOperation {
         }
     }
 
-    static <N extends Scalar<N>> void fillMx1_G(final TransformableRegion<N> product, final Access1D<N> left, final int complexity, final Access1D<N> right) {
+    static <N extends Scalar<N>> void fillMx1_G( TransformableRegion<N> product,  Access1D<N> left,  int complexity,  Access1D<N> right) {
 
-        Class<N> componenetType = (Class<N>) left.get(0L).getClass();
+        var componenetType = (Class<N>) left.get(0L).getClass();
         N zero;
         try {
-            zero = componenetType.newInstance();
-        } catch (InstantiationException | IllegalAccessException exception) {
+            zero = componenetType.getDeclaredConstructor().newInstance();
+        } catch (ReflectiveOperationException exception) {
             exception.printStackTrace();
             throw new ProgrammingError(exception);
         }
 
         int tmpRowDim = product.getRowDim();
 
-        N[] tmpLeftRow = (N[]) Array.newInstance(componenetType, complexity);
-        N tmpVal;
+        var tmpLeftRow = (N[]) Array.newInstance(componenetType, complexity);
+        @Var N tmpVal;
 
-        int tmpFirst = 0;
-        int tmpLimit = complexity;
+        @Var int tmpFirst = 0;
+        @Var int tmpLimit = complexity;
 
         for (int i = 0; i < tmpRowDim; i++) {
 
@@ -703,7 +687,7 @@ public class MultiplyBoth implements MatrixOperation {
         }
     }
 
-    static void fillMx1_P64(final TransformableRegion<Double> product, final Access1D<Double> left, final int complexity, final Access1D<Double> right) {
+    static void fillMx1_P64( TransformableRegion<Double> product,  Access1D<Double> left,  int complexity,  Access1D<Double> right) {
 
         int tmpRowDim = product.getRowDim();
         double[] tmpLeftRow = new double[complexity];
@@ -721,31 +705,31 @@ public class MultiplyBoth implements MatrixOperation {
         }
     }
 
-    static <N extends Scalar<N>> void fillMxN_G(final TransformableRegion<N> product, final Access1D<N> left, final int complexity, final Access1D<N> right) {
+    static <N extends Scalar<N>> void fillMxN_G( TransformableRegion<N> product,  Access1D<N> left,  int complexity,  Access1D<N> right) {
         MultiplyBoth.fillRxN_G(product, 0, product.getRowDim(), left, complexity, right);
     }
 
-    static <N extends Scalar<N>> void fillMxN_MT_G(final TransformableRegion<N> product, final Access1D<N> left, final int complexity,
-            final Access1D<N> right) {
+    static <N extends Scalar<N>> void fillMxN_MT_G( TransformableRegion<N> product,  Access1D<N> left,  int complexity,
+             Access1D<N> right) {
         MultiplyBoth.divide(0, product.getRowDim(), (f, l) -> MultiplyBoth.fillRxN_G(product, f, l, left, complexity, right));
     }
 
-    static void fillMxN_MT_P64(final TransformableRegion<Double> product, final Access1D<Double> left, final int complexity, final Access1D<Double> right) {
+    static void fillMxN_MT_P64( TransformableRegion<Double> product,  Access1D<Double> left,  int complexity,  Access1D<Double> right) {
         MultiplyBoth.divide(0, product.getRowDim(), (f, l) -> MultiplyBoth.fillRxN_P64(product, f, l, left, complexity, right));
     }
 
-    static void fillMxN_P64(final TransformableRegion<Double> product, final Access1D<Double> left, final int complexity, final Access1D<Double> right) {
+    static void fillMxN_P64( TransformableRegion<Double> product,  Access1D<Double> left,  int complexity,  Access1D<Double> right) {
         MultiplyBoth.fillRxN_P64(product, 0, product.getRowDim(), left, complexity, right);
     }
 
-    static <N extends Scalar<N>> void fillRxN_G(final TransformableRegion<N> product, final int firstRow, final int rowLimit, final Access1D<N> left,
-            final int complexity, final Access1D<N> right) {
+    static <N extends Scalar<N>> void fillRxN_G( TransformableRegion<N> product,  int firstRow,  int rowLimit,  Access1D<N> left,
+             int complexity,  Access1D<N> right) {
 
-        Class<N> componenetType = (Class<N>) left.get(0L).getClass();
+        var componenetType = (Class<N>) left.get(0L).getClass();
         N zero;
         try {
-            zero = componenetType.newInstance();
-        } catch (InstantiationException | IllegalAccessException exception) {
+            zero = componenetType.getDeclaredConstructor().newInstance();
+        } catch (ReflectiveOperationException exception) {
             exception.printStackTrace();
             throw new ProgrammingError(exception);
         }
@@ -753,11 +737,11 @@ public class MultiplyBoth implements MatrixOperation {
         int tmpRowDim = product.getRowDim();
         int tmpColDim = product.getColDim();
 
-        N[] tmpLeftRow = (N[]) Array.newInstance(componenetType, complexity);
-        N tmpVal;
+        var tmpLeftRow = (N[]) Array.newInstance(componenetType, complexity);
+        @Var N tmpVal;
 
-        int tmpFirst = 0;
-        int tmpLimit = complexity;
+        @Var int tmpFirst = 0;
+        @Var int tmpLimit = complexity;
 
         for (int i = firstRow; i < rowLimit; i++) {
 
@@ -783,16 +767,16 @@ public class MultiplyBoth implements MatrixOperation {
         }
     }
 
-    static void fillRxN_P32(final TransformableRegion<Double> product, final int firstRow, final int rowLimit, final Access1D<Double> left,
-            final int complexity, final Access1D<Double> right) {
+    static void fillRxN_P32( TransformableRegion<Double> product,  int firstRow,  int rowLimit,  Access1D<Double> left,
+             int complexity,  Access1D<Double> right) {
 
         int tmpRowDim = product.getRowDim();
         int tmpColDim = product.getColDim();
         float[] tmpLeftRow = new float[complexity];
-        float tmpVal;
+        @Var float tmpVal;
 
-        int tmpFirst = 0;
-        int tmpLimit = complexity;
+        @Var int tmpFirst = 0;
+        @Var int tmpLimit = complexity;
 
         for (int i = firstRow; i < rowLimit; i++) {
 
@@ -818,18 +802,18 @@ public class MultiplyBoth implements MatrixOperation {
         }
     }
 
-    static void fillRxN_P64(final TransformableRegion<Double> product, final int firstRow, final int rowLimit, final Access1D<Double> left,
-            final int complexity, final Access1D<Double> right) {
+    static void fillRxN_P64( TransformableRegion<Double> product,  int firstRow,  int rowLimit,  Access1D<Double> left,
+             int complexity,  Access1D<Double> right) {
 
         int tmpRowDim = product.getRowDim();
         int tmpColDim = product.getColDim();
         int tmpPlxDim = complexity;
 
         double[] tmpLeftRow = new double[tmpPlxDim];
-        double tmpVal;
+        @Var double tmpVal;
 
-        int tmpFirst = 0;
-        int tmpLimit = tmpPlxDim;
+        @Var int tmpFirst = 0;
+        @Var int tmpLimit = tmpPlxDim;
 
         for (int i = firstRow; i < rowLimit; i++) {
 
